# angulondiagmc

./: Makefile  Makefile.static  README.md  TODO  aux.c  aux.h  config.c  config.h  couplings.c  couplings.h  debug.c  debug.h  diagmc.ini  diagrams.c  diagrams.h  graphs.c  graphs.h  histograms.c  histograms.h  main.c  mc.c  mc.h  phonon.c  phonon.h  physics.c  physics.h  sectors.c  sectors.h  selfenergies.c  selfenergies.h  stat.c  stat.h  tests.c  tests.h  updates.c  updates.h
Analysis/: Analysis.nb  SelfEnergies.m
alpscore/: CMakeLists.txt  alpscoretest.cpp
gnuplot_i/: gnuplot_i.c  gnuplot_i.h
murmurhash3/: murmurhash3.c  murmurhash3.h
njgraf/: njgraf.c  njgraf.h
njsummat/: njformul.c  njformul.h  njsummat.c  njsummat.h
rbitree/: interval_tree_double.c  interval_tree_double.h  interval_tree_generic.h  linuxcompat.h  rbtree.c  rbtree.h  rbtree_augmented.c  rbtree_augmented.h
slurm/: diagmc.ini  diagmc.sbatch  diagmc01.ini  diagmc02.ini  diagmc03.ini  diagmc04.ini  diagmc05.ini  diagmc06.ini  diagmc07.ini  diagmc08.ini  diagmc09.ini  diagmc10.ini  diagmc11.ini  diagmc12.ini  diagmc13.ini  diagmc14.ini  diagmc15.ini  diagmc16.ini  runall.sh  slurm_run.sh
xtra/: ratio.c  xtraupdates.c
